2015-10-28  Keith Rollin  <krollin@apple.com>

        Do not sanitize user input for input[type=url]
        https://bugs.webkit.org/show_bug.cgi?id=150346
        <rdar://problem/23243240>

        Reviewed by Brent Fulgham.

        The Windows version of DumpRenderTree's eventSender.keyDown handler
        simulates user-entry by decomposing the given character into a virtual
        key code and a set of modifier keys. The code that determines if the
        shift key should be simulated only worked if the character was an
        upper case character. Extend this support to also include symbols that
        (on the U.S. keyboard) require holding down the shift key.

        This change allows fast/forms/input-user-input-sanitization.html
        to succeed, which requires us to simulate the entering of '@' and ':'.

        * DumpRenderTree/win/EventSender.cpp:
        (keyDownCallback):

2015-10-28  Alex Christensen  <achristensen@webkit.org>

        Compile and link with CMake on Mac
        https://bugs.webkit.org/show_bug.cgi?id=150632

        Reviewed by Tim Horton.

        * TestWebKitAPI/PlatformMac.cmake:

2015-10-28  Xabier Rodriguez Calvar  <calvaris@igalia.com>

        Unreviewed.

        * Scripts/webkitpy/common/config/watchlist: Removed dead files from Streams API watchlist.

2015-10-28  Per Arne Vollan  <peavo@outlook.com>

        Add WinCairo to list of ports in run-webkit-tests.
        https://bugs.webkit.org/show_bug.cgi?id=150625

        Reviewed by Brent Fulgham.

        * Scripts/webkitpy/common/config/ports.py:
        (DeprecatedPort.port):
        (WinPort.run_webkit_tests_command):
        (WinCairoPort):
        (GtkWK2Port):
        * Scripts/webkitpy/port/factory.py:
        (PortFactory):
        * Scripts/webkitpy/port/win.py:
        (WinPort.find_system_pid):
        (WinCairoPort):

2015-10-27  Alexey Proskuryakov  <ap@apple.com>

        WebKitTestRunner leaks in generateWhitelist()