@@ -354,3 +354,10 @@ class WinCairoPort(WinPort):
     port_name = "wincairo"
 
     VERSION_FALLBACK_ORDER = ["wincairo-xp", "wincairo-vista", "wincairo-7sp0", "wincairo-win10", "wincairo"]
+
+    def default_baseline_search_path(self):
+        name = self._name.replace('-wk2', '')
+        fallback_names = self.VERSION_FALLBACK_ORDER[self.VERSION_FALLBACK_ORDER.index(name):-1] + [self.port_name]
+        fallback_names.append('win')
+        fallback_names.append('mac')
+        return map(self._webkit_baseline_path, fallback_names)
